fixed z-index bug with sidebar on study_spot pages

--- a/BuStudentAssistant/Components/Layout/Sidebar.razor.css
+++ b/BuStudentAssistant/Components/Layout/Sidebar.razor.css
@@ -10,6 +10,7 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
+    z-index: 99;
   }
   
 body {
@@ -28,6 +29,7 @@ body {
   }
 
 *{
+      z-index: 99;
       list-style: none;
       text-decoration: none;
       margin: 0px;
@@ -109,7 +111,7 @@ body.active .wrapper .section{
   right: 0;
   left: auto;
   width: 100%;
-  z-index: 999;
+  z-index: 10001;
 
 }
 
